<?xml version="1.0"?>
<package format="2">
  <name>a_star_planner</name>
  <version>0.0.0</version>
  <description>The a_star_planner package</description>
  <license>BSD</license>

  <maintainer email="bradcanaday@gwmail.gwu.edu">Bradley Canaday</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

    <export>
        <nav_core plugin="${prefix}/a_star_plugin.xml" />
    </export>

</package>
